Redesigned communication with proxy
Added bi-directional messaging

--- a/chrome-extension/bower.json
+++ b/chrome-extension/bower.json
@@ -1,6 +1,8 @@
 {
   "name": "chromeproxy",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "q": "1.0.1"
+  },
   "devDependencies": {}
 }
