--- a/chrome-extension/app/manifest.json
+++ b/chrome-extension/app/manifest.json
@@ -26,5 +26,6 @@
         "contextMenus",
         "proxy"
     ],
-    "devtools_page": "devtools.html"
+    "devtools_page": "devtools.html",
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
