--- a/chrome-extension/bower.json
+++ b/chrome-extension/bower.json
@@ -2,7 +2,7 @@
   "name": "tamper",
   "version": "0.0.0",
   "dependencies": {
-    "q": "1.0.1"
-  },
-  "devDependencies": {}
+    "q": "1.0.1",
+    "angular": "~1.3.0"
+  }
 }
