--- a/chrome-extension/app/manifest.json
+++ b/chrome-extension/app/manifest.json
@@ -25,6 +25,7 @@
         "toggle-tamper": {
             "suggested_key": {
                 "windows": "Ctrl+Shift+P",
+                "linux": "Ctrl+Shift+P",
                 "mac": "Command+Shift+P"
             },
             "description": "Toggle Tamper"
